deploy/overlays/staging/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automatedlinkedin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - app.staging.elitale.com
        - api.staging.elitale.com
        - auth.staging.elitale.com
      secretName: automatedlinkedin-tls
  rules:
    - host: app.staging.elitale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: body
                port:
                  name: http
    - host: api.staging.elitale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brain
                port:
                  name: http
    - host: auth.staging.elitale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
